force-app/main/default/objects/Campaign/fields/Ambito__c.field-meta.xml
<CustomField>
    <fullName>Ambito__c</fullName>
    <description>Define el ámbito de la campaña</description>
    <label>Ambito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>CC.AA.</fullName>
                <isActive>false</isActive>
                <label>CC.AA.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>