force-app/main/default/objects/Campaign/fields/Comunidad__c.field-meta.xml
<CustomField>
    <fullName>Comunidad__c</fullName>
    <description>Campo dependiente de Ambito Local</description>
    <label>Comunidad</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ambito__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Comunidad</valueSetName>
    </valueSet>
</CustomField>