force-app/main/default/objects/Campaign/fields/Residencias__c.field-meta.xml
<CustomField>
    <fullName>Residencias__c</fullName>
    <description>Campo de Residencias de interés dipendiente de Ambito&gt;Local</description>
    <label>Residencias de interés</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Comunidad__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Residencias</valueSetName>
    </valueSet>
</CustomField>