force-app/main/default/objects/Campaign/fields/ZonaPromocion__c.field-meta.xml
<CustomField>
    <fullName>ZonaPromocion__c</fullName>
    <description>Zona (Comunidad o Municipio) donde se aplica la promoción, es dependiente de Ámbito</description>
    <label>Zona de promocion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Ambito__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARGANZUELA</fullName>
            </value>
            <value>
                <fullName>COLMENAR</fullName>
            </value>
            <value>
                <fullName>VALLECAS</fullName>
            </value>
            <value>
                <fullName>COSLADA</fullName>
            </value>
            <value>
                <fullName>HUMANES</fullName>
            </value>
            <value>
                <fullName>VICÁLVARO</fullName>
            </value>
            <value>
                <fullName>ALCORCON</fullName>
            </value>
            <value>
                <fullName>VILLANUEVA DE LA CAÑADA</fullName>
            </value>
            <value>
                <fullName>POZUELO</fullName>
            </value>
            <value>
                <fullName>USERA</fullName>
            </value>
            <value>
                <fullName>VILLALBA</fullName>
            </value>
            <value>
                <fullName>CENICIENTOS</fullName>
            </value>
            <value>
                <fullName>PATONES</fullName>
            </value>
            <value>
                <fullName>CIUDAD LINEAL</fullName>
            </value>
            <value>
                <fullName>ALCALÁ DE HENARES</fullName>
            </value>
            <value>
                <fullName>VILLAVERDE</fullName>
            </value>
            <value>
                <fullName>GETAFE</fullName>
            </value>
            <value>
                <fullName>LA MARINA</fullName>
            </value>
            <value>
                <fullName>SAN AGUSTÍN</fullName>
            </value>
            <value>
                <fullName>TORREJÓN</fullName>
            </value>
            <value>
                <fullName>TEIÀ</fullName>
            </value>
            <value>
                <fullName>VILANOVA</fullName>
            </value>
            <value>
                <fullName>HORTA</fullName>
            </value>
            <value>
                <fullName>SANT CUGAT</fullName>
            </value>
            <value>
                <fullName>BARCELONA</fullName>
            </value>
            <value>
                <fullName>HELLIN</fullName>
            </value>
            <value>
                <fullName>TOMELLOSO</fullName>
            </value>
            <value>
                <fullName>CIUDAD REAL</fullName>
            </value>
            <value>
                <fullName>CHILLARÓN DE CUENCA</fullName>
            </value>
            <value>
                <fullName>GUADALAJARA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>