force-app/main/default/objects/Campaign/listViews/CampaniasActivas.listView-meta.xml
<ListView>
    <fullName>CampaniasActivas</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Residencias__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Campañas Activas</label>
</ListView>