force-app/main/default/objects/Campaign/listViews/TODAS_LAS_CAMPA_AS.listView-meta.xml
<ListView>
    <fullName>TODAS_LAS_CAMPA_AS</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Event,Demo Signup / Trial,Email,Referral Program,Search,Social Media,Thought Leadership,Website Direct,Other</value>
    </filters>
    <label>TODAS LAS CAMPAÑAS</label>
</ListView>